Minimize bootstrap-all middleware dependencies