@@ -172,6 +172,12 @@ subprojects {
         testLogging {
             events "passed", "skipped", "failed"
         }
+        jvmArgs += [
+                '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+                '--add-opens=java.base/java.math=ALL-UNNAMED',
+                '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED'
+        ]
     }
 
     tasks.withType(JavaCompile).configureEach {
